<resources>
    <!-- App Strings-->
    <string name="app_name">KuesuChan</string>
    <string name="db_name">KuesuChan</string>
    <string name="delimiter">/</string>
    <!-- Constants -->
    <string name="english_writing_style">English</string>
    <string name="kana_writing_style">かな</string>
    <string name="kanji_writing_style">漢字</string>
    <string name="flash_card_label">Flash Card</string>
    <string name="practice_label">Practice</string>
    <string name="kanji_writing_label">Kanji Writing</string>
    <string name="database_label">Database</string>
    <string name="statistics_label">Statistics</string>
    <string name="settings_label">Settings</string>
    <!-- SetupActivity -->
    <string-array name="Amounts">
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>40</item>
        <item>50</item>
        <item>60</item>
        <item>70</item>
        <item>80</item>
        <item>90</item>
        <item>100</item>
    </string-array>
</resources>